in this commit i fix some bugs that i will mention below: 1.mysql bind to 0.0.0.0 2.change and fix some privilage in mysql user 3.delete some junk data

--- a/roles/ctfd/tasks/main.yml
+++ b/roles/ctfd/tasks/main.yml
@@ -52,7 +52,7 @@
      virtualenv_command: /usr/bin/python3.8 -m venv
 
 - name: "install some other packages"
-  shell: "{{ virt_path }}/bin/pip install wheel flask gunicorn"
+  shell: "{{ virt_path }}/bin/pip install wheel flask gunicorn cryptography"
 
 - name: copy service file
   template:
